@@ -2,6 +2,7 @@ Revision history for Perl extension Monitoring::Availability.
 
 0.42  Thu Feb 21 16:38:30 CET 2013
     - fixed breakdown by weeks
+    - fixed calculation when report start is at the same time as log entry
 
 0.40  Sat Dec 29 20:51:55 CET 2012
     - changed confess to warning on bogus logentries
